{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 20,
  "lineage": "fa23bdae-e669-ae96-8d2b-3bb7e6c2ce45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "practice_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f1b6ae813a72050",
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:elastic-ip/eipalloc-07f1b6ae813a72050",
            "association_id": "eipassoc-0f8c848902eb076e2",
            "domain": "vpc",
            "id": "eipalloc-07f1b6ae813a72050",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-03200e094be13dda0",
            "private_dns": "ip-10-0-1-18.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-16-184-55-34.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "16.184.55.34",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-nat-eip"
            },
            "tags_all": {
              "Name": "practice-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "practice_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:internet-gateway/igw-01de1be76e1e8fc40",
            "id": "igw-01de1be76e1e8fc40",
            "owner_id": "891377120337",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-igw"
            },
            "tags_all": {
              "Name": "practice-igw"
            },
            "vpc_id": "vpc-06cc0914923aa4ea0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "practice_nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f1b6ae813a72050",
            "association_id": "eipassoc-0f8c848902eb076e2",
            "connectivity_type": "public",
            "id": "nat-085aaeecf90e3aca4",
            "network_interface_id": "eni-03200e094be13dda0",
            "private_ip": "10.0.1.18",
            "public_ip": "16.184.55.34",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f46268013f489074",
            "tags": {
              "Name": "practice-nat-2a"
            },
            "tags_all": {
              "Name": "practice-nat-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.practice_nat_eip",
            "aws_subnet.public_2a",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09edb08175082852b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-085aaeecf90e3aca4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09edb08175082852b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09edb08175082852b"
          },
          "dependencies": [
            "aws_eip.practice_nat_eip",
            "aws_nat_gateway.practice_nat_2a",
            "aws_route_table.private_rt",
            "aws_subnet.public_2a",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01de1be76e1e8fc40",
            "id": "r-rtb-0724c7deea990e8931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0724c7deea990e893",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0724c7deea990e893"
          },
          "dependencies": [
            "aws_internet_gateway.practice_igw",
            "aws_route_table.public_rt",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:route-table/rtb-09edb08175082852b",
            "id": "rtb-09edb08175082852b",
            "owner_id": "891377120337",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "practice-rt-private"
            },
            "tags_all": {
              "Name": "practice-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cc0914923aa4ea0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "id": "rtb-09edb08175082852b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:route-table/rtb-0724c7deea990e893",
            "id": "rtb-0724c7deea990e893",
            "owner_id": "891377120337",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "practice-rt-public"
            },
            "tags_all": {
              "Name": "practice-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cc0914923aa4ea0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "id": "rtb-0724c7deea990e893",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f53b70baeca0d672",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09edb08175082852b",
            "subnet_id": "subnet-0f07bf1aaea10fa31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_2a",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2c_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005ecb42863c99f74",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09edb08175082852b",
            "subnet_id": "subnet-0bbd51a6e797596c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_2c",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0823a9bde6d6e5a4a",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0724c7deea990e893",
            "subnet_id": "subnet-0f46268013f489074"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_2a",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2c_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0848946800b1a381e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0724c7deea990e893",
            "subnet_id": "subnet-06504d8f9d035dec3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_2c",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:subnet/subnet-0f07bf1aaea10fa31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f07bf1aaea10fa31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377120337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-sub-pri-2a"
            },
            "tags_all": {
              "Name": "practice-sub-pri-2a"
            },
            "vpc_id": "vpc-06cc0914923aa4ea0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "id": "subnet-0f07bf1aaea10fa31",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:subnet/subnet-0bbd51a6e797596c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbd51a6e797596c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377120337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-sub-pri-2c"
            },
            "tags_all": {
              "Name": "practice-sub-pri-2c"
            },
            "vpc_id": "vpc-06cc0914923aa4ea0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "id": "subnet-0bbd51a6e797596c7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:subnet/subnet-0f46268013f489074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46268013f489074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377120337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-sub-pub-2a"
            },
            "tags_all": {
              "Name": "practice-sub-pub-2a"
            },
            "vpc_id": "vpc-06cc0914923aa4ea0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "id": "subnet-0f46268013f489074",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:subnet/subnet-06504d8f9d035dec3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06504d8f9d035dec3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377120337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-sub-pub-2c"
            },
            "tags_all": {
              "Name": "practice-sub-pub-2c"
            },
            "vpc_id": "vpc-06cc0914923aa4ea0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "id": "subnet-06504d8f9d035dec3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "practice_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:891377120337:vpc/vpc-06cc0914923aa4ea0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd7cefb797479ae3",
            "default_route_table_id": "rtb-006caa54aa7077d0c",
            "default_security_group_id": "sg-06d54ecc8af876a5b",
            "dhcp_options_id": "dopt-0d5200d25a0858322",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cc0914923aa4ea0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006caa54aa7077d0c",
            "owner_id": "891377120337",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "practice-vpc"
            },
            "tags_all": {
              "Name": "practice-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377120337",
            "id": "vpc-06cc0914923aa4ea0",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}